[doc] /var/run -> /run

--- a/doc/lighttpd.8
+++ b/doc/lighttpd.8
@@ -59,7 +59,7 @@ Show a brief help message and exit.
 /etc/lighttpd/lighttpd.conf
 The standard location for the configuration file.
 .TP 8
-/var/run/lighttpd.pid
+/run/lighttpd.pid
 The standard location for the PID of the running \fBlighttpd\fP process.
 .
 .SH SEE ALSO
